[package]
name = "bili_live"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[dependencies]
ctrlc = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
qrcode = "0.14"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.4"
