[package]
name = "bili_live"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[dependencies]
ctrlc = "3.4.7"
image = { version = "0.25.6", default-features = false, features = ["png"] }
qrcode = "0.14.1"
# reqwest = { version = "0.12.15", features = [
#     "blocking",
#     "json",
# ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", default-features = false, features = [
    "alloc",
] }
minreq = { version = "2.14.0", default-features = false, features = ["https-rustls"] }
thiserror = { version = "2.0.12", default-features = false }
log = { version = "0.4.27", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
